# posthog-cli

./: Cargo.toml
src/: api.rs  config.rs  main.rs
