[package]
name = "posthog"
version = "0.1.0"
edition = "2024"

[profile.release]
lto = false

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
dirs = "6"
toml = "0.8"
tabled = "0.17"

[dev-dependencies]
tempfile = "3"
